Fix width of .confirmation-modal on narrow screens (#2743)

--- a/app/javascript/styles/components.scss
+++ b/app/javascript/styles/components.scss
@@ -2947,7 +2947,11 @@ button.icon-button.active i.fa-retweet {
 }
 
 .confirmation-modal {
-  max-width: 380px;
+  max-width: 280px;
+
+  @media screen and (min-width: 480px) {
+    max-width: 380px;
+  }
 }
 
 .confirmation-modal__action-bar {
